--- a/v1/index.html
+++ b/v1/index.html
@@ -18,8 +18,13 @@
 
 
         </div>
-        <div class="result-display"></div>
+
+        <div class="result-container">
+            <button class="submit-js " onclick =" displayScore()"> Submit</button>
+            <div class="result-display"></div>
+
+        </div>
         <script type="module" src="./v1.js"></script>
       
     </body>
-</html
+</html>
