--- a/v1/questionnaire.html
+++ b/v1/questionnaire.html
@@ -18,6 +18,8 @@
 
 
         </div>
+
+        <button class="submit-js " onclick =" displayScore()">Submit</a> </button>
      <script type="module" src="./v1.js"></script>
     </body>
 </html>
