-created result.js to manage display of results -created retake quiz button -created go to quiz button -added alert on submission without attempting all the q and  disabled manual submission without attempting all questions

--- a/v1/Results.html
+++ b/v1/Results.html
@@ -6,8 +6,7 @@
     <body>
         <div class="result-container">
             <div class="result-display"></div>
-
         </div>
     </body>
-    <script type="module" src="./v1.js"></script>
+    <script src="./results.js"></script>
 </html>
