made review page to review the answers  chosen by the user

--- a/v1/Results.html
+++ b/v1/Results.html
@@ -7,6 +7,9 @@
         <div class="result-container">
             <div class="result-display"></div>
         </div>
+        <p>TO REVIEW YOUR ANSWERS CLICK REVIEW BUTTON</p>
+       <button><a href="review.html">REVIEW></a></button>
+         <script src="./results.js"></script>
     </body>
-    <script src="./results.js"></script>
+
 </html>
