--- a/v1/questionnaire.html
+++ b/v1/questionnaire.html
@@ -20,6 +20,6 @@
         </div>
 
         <button class="submit-js " onclick =" displayScore()">Submit</a> </button>
-     <script type="module" src="./v1.js"></script>
+     <script type="module" src="./v1.js"></script><script type="module" src="./v1.js"></script>
     </body>
 </html>
