Fixed file paths and added a goHome button for review page

--- a/pages/Results.html
+++ b/pages/Results.html
@@ -9,7 +9,7 @@
         </div>
         <p>TO REVIEW YOUR ANSWERS CLICK REVIEW BUTTON</p>
        <button><a href="review.html">REVIEW></a></button>
-         <script src="./results.js"></script>
+       <script src="../scripts/results.js"></script>
     </body>
 
 </html>
