--- a/pages/review.html
+++ b/pages/review.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <div class="answers-review"></div>
-        <script type="module" src="./review.js"></script>
+                <button onclick="goHome()">goHome</button>
+    
+    <script type="module" src="../scripts/review.js"></script>
     </body>
 </html>
