--- a/v1/index.html
+++ b/v1/index.html
@@ -9,9 +9,14 @@
         <div class="welcome">
             <p> Welcome</p>
             <P> Take a quiz to check your knowledge</P>
-            <button ><a href="questionnaire.html">questions</a></button>
+           <a href="../pages/questionnaire.html"> <button>questions</button></a>
+          </div>
+           <div class="admin-page">
+            <p>If you are an admin click admin button</p>
+           <a href="../pages/adminPage.html"><button>Admin-Page</button></a>
+          </div>
 
-        </div>
+        
 
       
     </body>
