--- a/pages/adminPage.html
+++ b/pages/adminPage.html
@@ -18,7 +18,8 @@
 
 
 
-<script type="module" src="admin.js"></script>
+   <script type="module" src="../scripts/admin.js"></script>
+
   </body>
 
 </html>
