--- a/pages/questionnaire.html
+++ b/pages/questionnaire.html
@@ -20,6 +20,7 @@
         </div>
 
         <button class="submit-js " onclick =" displayScore()">Submit</a> </button>
-     <script type="module" src="./v1.js"></script><script type="module" src="./v1.js"></script>
+   <script type="module" src="../v1/v1.js"></script>
+
     </body>
 </html>
